# crosspack

./: .gitignore  .gitmodules  .release-please-config.json  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.agents/plans/: 2026-02-12-v0-3-source-management.md  2026-02-23-readme-design.md  2026-02-24-installer-format-expansion.md  2026-02-25-cargo-lock-release-workflow-design.md  2026-02-25-cargo-lock-release-workflow-implementation-plan.md  2026-02-25-native-installer-default-implementation.md  2026-02-25-neovide-registry-gui-design.md  2026-02-25-neovide-registry-gui-implementation-plan.md  2026-02-26-macos-launcher-bundle-registration-implementation-plan.md
.github/: dependabot.yml
.github/workflows/: ci.yml  dependency-review.yml  prerelease-artifacts.yml  registry-sync.yml  release-artifacts.yml  release-please-cargo-lock.yml  release-please.yml
.opencode/plans/: 2026-03-03-cli-output-mode-hardening-implementation-plan.md
crates/: AGENTS.md
crates/crosspack-cli/: AGENTS.md  Cargo.toml
crates/crosspack-cli/src/: bundle_flows.rs  command_flows.rs  completion.rs  core_flows.rs  dispatch.rs  main.rs  metadata.rs  render.rs  tests.rs
crates/crosspack-core/: Cargo.toml
crates/crosspack-core/src/: archive.rs  artifact.rs  gui.rs  lib.rs  manifest.rs  tests.rs
crates/crosspack-installer/: AGENTS.md  Cargo.toml
crates/crosspack-installer/src/: artifact.rs  exposure.rs  fs_utils.rs  layout.rs  lib.rs  native.rs  pins.rs  receipts.rs  tests.rs  transactions.rs  types.rs  uninstall.rs
crates/crosspack-registry/: AGENTS.md  Cargo.toml
crates/crosspack-registry/src/: fs_ops.rs  git_ops.rs  lib.rs  registry_index.rs  snapshot_state.rs  source_state.rs  source_store.rs  source_sync.rs  source_types.rs  tests.rs
crates/crosspack-resolver/: AGENTS.md  Cargo.toml
crates/crosspack-resolver/src/: constraints.rs  lib.rs  order.rs  resolve.rs  search.rs  tests.rs  types.rs
crates/crosspack-security/: Cargo.toml
crates/crosspack-security/src/: checksum.rs  ed25519.rs  lib.rs
docs/: architecture.md  contributor-playbook.md  dependency-policy-spec.md  install-flow.md  manifest-spec.md  registry-bootstrap-runbook.md  registry-spec.md  release-checklist.md  source-management-spec.md  transaction-rollback-spec.md
docs/plans/: 2026-02-12-registry-metadata-signing.md  2026-02-14-spi-7-kickoff.md
docs/trust/: core-registry-fingerprint.txt
scripts/: check-snapshot-mismatch-health.sh  install.ps1  install.sh  sync-crosspack-registry-release.sh  validate-snapshot-flow.sh
