[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
version = "0.8.1"

[workspace.dependencies]
anyhow = "1.0"
anstyle = "1.0"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
ed25519-dalek = "2.2"
hex = "0.4"
indicatif = "0.18"
semver = { version = "1.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
sha2 = "0.10"
toml = "1.0"
