[package]
name = "crosspack-registry"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
crosspack-core = { path = "../crosspack-core" }
crosspack-security = { path = "../crosspack-security" }

[dev-dependencies]
ed25519-dalek.workspace = true
hex.workspace = true
